force-app/main/default/objects/Flow_Fault__e/fields/Fault_Message__c.field-meta.xml
<CustomField>
    <fullName>Fault_Message__c</fullName>
    <description>What message occurred?</description>
    <label>Fault Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>