force-app/main/default/objects/Flow_Fault__e/fields/Flow_Context__c.field-meta.xml
<CustomField>
    <fullName>Flow_Context__c</fullName>
    <description>Information about the flow</description>
    <label>Flow Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>