force-app/main/default/objects/Flow_Fault__e/fields/Triggering_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Record_Id__c</fullName>
    <description>This field stores the starting record id. For Record triggered Flows it&#39;s the triggering record. For Screen Flow it&#39;s the record id where the screen flow is called from.</description>
    <label>Triggering Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>